crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__invalid_type_hash_attribute.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

None

Diagnostics:

====
Error: Invalid format for the type_hash attribute. The only valid arguments are: name, debug.
====

AuxData:

None
